--- a/senpick/app/templates/index.html
+++ b/senpick/app/templates/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Welcome to Django Home!</h1>
     <img src="{% static 'images/test.png' %}" width="200">
-    <h2>Github Actions test</h2>
+    <h2>Github Actions test 2</h2>
     <script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
