--- a/senpick/app/templates/sidebar.html
+++ b/senpick/app/templates/sidebar.html
@@ -2,7 +2,7 @@
 <div class="sidebar" id="sidebar">
   <!-- 상단 헤더 (브랜드/토글) -->
   <div class="sidebar-header">
-    <img src="{% static 'images/top_logo.png' %}" alt="Senpick Logo" class="logo-img">
+    <img src="{% static 'images/top_logo.svg' %}" alt="Senpick Logo" class="logo-img">
     <button class="menu-btn" id="sidebar-toggle-btn" title="사이드바 접기">
       <img src="{% static 'images/sidebar_toggle.png' %}" alt="사이드바 토글">
     </button>
