--- a/senpick/static/css/sidebar.css
+++ b/senpick/static/css/sidebar.css
@@ -47,7 +47,7 @@
 }
 
 .sidebar.mini .sidebar-header {
-  margin-bottom: 12px !important;
+  /* margin-bottom: 12px !important; */
   padding: 0 8px !important;
   display: flex;
   justify-content: center;;
@@ -140,7 +140,7 @@
 .sidebar.mini .search-row {
   width: 44px !important;
   height: 44px !important;
-  margin-bottom: 10px !important;
+  /* margin-bottom: 10px !important; */
   padding: 0 !important;
   border-radius: 12px !important;
   justify-content: center;
@@ -362,4 +362,8 @@
   background-color: #e0e0e0; /* 선 색상 */
   margin: 10px 0;            /* 위아래 여백 */
   width: 90%;               /* 전체 너비 */
+}
+
+.mini .divider-line {
+  width: 60%;
 }
