--- a/senpick/static/css/sidebar.css
+++ b/senpick/static/css/sidebar.css
@@ -1,6 +1,9 @@
 /* === SIDEBAR 기본 구조 === */
 .sidebar {
+  position: sticky;
+  top: 0;
   width: 310px;
+  min-width: 310px;
   height: 100vh;
   /* position: fixed; */
   /* top: 0; */
@@ -17,6 +20,7 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.07);
   transition: width 0.22s cubic-bezier(.38, 1.16, .64, 1);
   justify-content: space-between;
+
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -27,7 +31,8 @@
 }
 
 .sidebar.mini {
-  width: 76px !important;
+  width: 76px;
+  min-width: 76px;
 }
 
 /* === 상단 HEADER === */
@@ -35,9 +40,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 60px;
-  width: 100%;
-  padding: 0 14px;
+  /* width: 100%; */
+  padding: 0 8px 0 18px;
   margin-top: 24px;
   /* margin-bottom: 16px; */
   box-sizing: border-box;
@@ -71,11 +75,18 @@
 }
 
 .logo-img img,
-.brand-logo img,
-.menu-btn img,
-.brand-link img {
+.brand-logo img {
   width: 28px;
   height: 28px;
+  object-fit: contain;
+  display: block;
+  margin: 0 auto;
+}
+
+.brand-link img, 
+.menu-btn img {
+  width: 24px;
+  height: 24px;
   object-fit: contain;
   display: block;
   margin: 0 auto;
@@ -94,8 +105,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  /* width: 100%; */
   min-height: 0;
+  padding: 0 14px;
   overflow-y: auto;
   scrollbar-width: none;
   -ms-overflow-style: none;
@@ -106,7 +118,7 @@
 
 /* === 검색창 === */
 .search-row {
-  width: 264px;
+  width: 100%;
   height: 48px;
   background: #f8f8fa;
   border: 2px solid #ededed;
@@ -152,10 +164,15 @@
   margin: 0 auto;
 }
 
+.search-label {
+  width: 100%;
+  margin: 0 14px;
+}
+
 /* === 메뉴 버튼 === */
 .menu-btn-row {
   cursor: pointer;
-  width: 264px;
+  width: 100%;
   height: 48px;
   background: #ffffff;
   border-radius: 10px;
@@ -202,7 +219,7 @@
 
 /* === 채팅 리스트 === */
 .chat-list {
-  width: 264px;
+  width: 100%;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -265,25 +282,13 @@
 
 /* === 하단 마이페이지/로그아웃 === */
 
-/* .sidebar-main {
-  flex: 1 1 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  width: 100%;
-  min-height: 0;
-  overflow-y: auto;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
-} */
 .sidebar-bottom {
   /* flex: 1 1 auto; */
+  padding: 0 14px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  width: 100%;
   min-height: 0;
   overflow-y: auto;
   scrollbar-width: none;
@@ -322,7 +327,7 @@
   justify-content: space-between;
   height: 60px;
   width: 100%;
-  padding: 0 10px;
+  padding-left: 5px;
   margin-bottom: 10px;
   border-radius: 12px;
   background: #ffffff;
@@ -330,8 +335,13 @@
   box-sizing: border-box;
 }
 
+.mini .sidebar-header, .mini .sidebar-main, .mini .sidebar-bottom {
+  padding: 0;
+}
+
 .mini .brand-bar {
   justify-content: center;
+  padding: 0;
 }
 
 .brand-label {
@@ -360,8 +370,8 @@
 .divider-line {
   height: 1px;
   background-color: #e0e0e0; /* 선 색상 */
-  margin: 10px 0;            /* 위아래 여백 */
-  width: 90%;               /* 전체 너비 */
+  margin: 10px auto;            /* 위아래 여백 */
+  width: 100%;               /* 전체 너비 */
 }
 
 .mini .divider-line {
