--- a/senpick/static/css/style.css
+++ b/senpick/static/css/style.css
@@ -1,8 +1,15 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    /* font-family: Arial, sans-serif;
+    background-color: #f4f4f4; */
+}
+
 h1 {
     color:red;
 }
 
 .main-content {
     padding: 20px;
-    width: calc(100% - 300px);
+    width: 100%
 }
