--- a/senpick/app/templates/index.html
+++ b/senpick/app/templates/index.html
@@ -5,10 +5,10 @@
 <head>
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/sidebar.css' %}">
+    <link rel="stylesheet" href="{% static 'css/sidebar2.css' %}">
 </head>
 <body>
-    <div>
-        <div style="display:flex;">
+    <div style="display:flex;">
         {% include "sidebar.html" %}
         <div class="main-content">
             <h1>Welcome to Django Home!</h1>
@@ -16,6 +16,7 @@
             <h2>Github Actions test 5</h2>
             <script src="{% static 'js/script.js' %}"></script>
         </div>
+        {% include "sidebar2.html" %}
     </div>
 </body>
 </html>
