--- a/senpick/static/css/sidebar.css
+++ b/senpick/static/css/sidebar.css
@@ -2,9 +2,11 @@
 .sidebar {
   position: sticky;
   top: 0;
-  width: 310px;
-  min-width: 310px;
-  height: 100vh;
+  width: 310px !important;
+  min-width: 310px !important;
+  max-width: 310px !important;
+  flex-basis: 310px !important;
+  flex-shrink: 0 !important;  /* ← 추가! */
   /* position: fixed; */
   /* top: 0; */
   /* left: 0; */
@@ -27,7 +29,7 @@
   user-select: none;
 
   -webkit-user-drag: none;
-  user-drag: none;
+  -user-drag: none;
 }
 
 .sidebar.mini {
@@ -62,8 +64,8 @@
 .brand-logo,
 .menu-btn,
 .brand-link {
-  width: 40px;
-  height: 40px;
+  width: 40px !important;
+  height: 40px !important;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -377,3 +379,14 @@
 .mini .divider-line {
   width: 60%;
 }
+.main-content {
+    flex: 1 1 0%;
+    min-width: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #f5f5f8;
+    min-height: 100vh;
+    padding: 0;
+}
+
