--- a/senpick/app/templates/chat.html
+++ b/senpick/app/templates/chat.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="{% static 'css/stepper.css' %}">
   <link rel="stylesheet" href="{% static 'css/chat.css' %}">
   <link rel="stylesheet" href="{% static 'css/sidebar.css' %}">
+  <link rel="stylesheet" href="{% static 'css/sidebar2.css' %}">
 </head>
 <body>
   <div class="app-layout">
@@ -33,6 +34,7 @@
         </form>
       </div>
     </div>
+    {% include 'sidebar2.html' %}
   </div>
   <script>
     const stepData = [
