--- a/senpick/static/css/chat.css
+++ b/senpick/static/css/chat.css
@@ -17,12 +17,13 @@ body {
   align-items: center;
   background: #f5f5f8;
   min-height: 100vh;
+  height: 100vh;
   padding: 0;
 }
 /* 상단 인삿말/부제 */
 .chatbot-header {
   width: 700px;
-  margin: 54px 0 28px 0;
+  margin-top: 54px;
   text-align: left;
 }
 .chatbot-header h1 {
@@ -39,6 +40,7 @@ body {
 /* 채팅 카드 */
 .chatbot-body {
   width: 700px;
+  height: 100vh;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -47,6 +49,7 @@ body {
 .chat-window {
   width: 100%;
   min-height: 320px;
+  height: 100vh;
   background: #F5F5F8;
   border-radius: 22px;
   padding: 32px 36px 32px 36px;
@@ -55,6 +58,8 @@ body {
   display: flex;
   flex-direction: column;
   gap: 13px;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 /* 챗 메시지(봇/유저) */
 .chat-msg {
